# python-llm-demo

./: .env.example  .gitignore  HTTPONLY_COOKIE_FIX.md  README.md  SECURITY_OPTIMIZATION_PHASE2.md  agent_demo.py  install-poetry.py  logfile  note.md  requirements.txt
.claudian/: claudian-settings.json
.obsidian/: graph.json  (+1 more)
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/: .env.example  .gitignore  PROJECT_STRUCTURE.md  alembic.ini  pyproject.toml  requirements.txt
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/alembic/: env.py
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/app/: __init__.py
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/app/core/: database.py  response.py
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/app/middleware/: __init__.py
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/examples/: async_demo.py  sqlalchemy_native_demo.py
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/tests/: conftest.py  test_auth.py  test_background_tasks.py  test_intelligence_api.py  test_intelligence_classifier.py  test_intelligence_ingest.py  test_items.py  test_markdown_scanner.py  test_posts.py  test_users.py
AI-Agent整合学习路线/01-python-backend/code/fastapi-fullstack-demo/backend/uv-setup/: README.md  pyproject.toml
FastAPI/backend/: README.md  note.md  pyproject.toml  requirements.txt
FastAPI/backend/app/: main.py
FastAPI/backend/app/core/: __init__.py  config.py  database.py  response.py
FastAPI/backend/app/dependencies/: __init__.py  auth.py
FastAPI/backend/app/exceptions/: __init__.py
FastAPI/backend/app/middleware/: __init__.py
FastAPI/backend/app/models/: __init__.py  item.py  post.py  response.py  tag.py  user.py
FastAPI/backend/app/routers/: __init__.py  auth.md  auth.py  items.py  posts.py  users.py
FastAPI/backend/app/schemas/: __init__.py  auth.py
FastAPI/backend/app/services/: __init__.py  auth_service.py
FastAPI/backend/app/utils/: __init__.py  auth.py
(+237 files in other folders)
